Fix for the cards to make sure the white portion isn't too narrow for the image.

--- a/groupproject/src/app/components/blogpost/blogpost.component.scss
+++ b/groupproject/src/app/components/blogpost/blogpost.component.scss
@@ -231,6 +231,7 @@ body {background: #f1f1f1; margin: 2rem}
 			float: left;
 			width: 60%;
 			z-index: 0;
+			min-height: 400px;
 
 			&:before {
 				transform: skewX(-5deg);
